# telegram-bot

./: README.md  sync_w2.sh
lib/: Cargo.toml
lib/examples/: poll.rs
lib/src/: a.txt  api.rs  errors.rs  lib.rs  stream.rs
lib/src/connector/: hyper.rs  mod.rs  proxy_hyper.rs  test_proxy.rs
lib/src/doc/: a.json  struct.txt
lib/src/util/: messages.rs
raw/: Cargo.toml
raw/src/: lib.rs
raw/src/demos/: a1.rs  mod.rs
raw/src/doc/: a.txt
raw/src/requests/: a_multipart_test.rs  approve_chat_join_request.rs  chat_join_request.rs  copy_message.rs  create_chat_invite_link.rs  edit_message_text.rs  mod.rs  promote_chat_member.rs  send_audio.rs  send_contact.rs  send_document.rs  send_location.rs  send_media_group.rs  send_message.rs  send_photo.rs  send_venue.rs  send_video.rs
raw/src/requests/_base/response_types/: json.rs
raw/src/types/: chat.rs  chat_administrator.rs  chat_boost.rs  chat_boost_removed.rs  chat_member.rs  forum_topic_created.rs  input_file.rs  input_file_x.rs  input_media.rs  link_preview_options.rs  message.rs  mod.rs  update.rs
